--- a/admin.ejs
+++ b/admin.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Admin Page</title>
+  <title>Admin Page</title>
   <link rel="stylesheet" href="CSS/admin.css">
 </head>
 <body>
@@ -12,14 +12,14 @@
     <ul>
       <li><a href="viewproducts">View Products</a></li>
       <li><a href="addproducts">Add Products</a></li>
-      <li><a href="addcategory">Add Category</a></li>
       <li><a href="viewReser">View Reservations</a></li>
       <li><a href="">View Users</a></li>
+      <li><a href="/editabout">Edit About</a></li>
       <li><a href="home">SignOut</a></li>
     </ul>
   </div>
   <div class="content">
-    <h2>Welcome to the Admin Dashboard</h2>
+    <h2> Welcome Admin </h2>
     <p></p>
   </div>
 </body>
