--- a/viewproducts.ejs
+++ b/viewproducts.ejs
@@ -17,51 +17,31 @@
 
 <div class="main-content">
   <h1>All Products</h1>
-  
-  <div class="product">
-    <img src="" alt="Product 1 Image" class="product-image">
-    <h2>Product 1</h2>
-    <p>Description of Product</p>
-    <div class="actions">
-      <button class="edit">Edit</button>
-      <button class="delete">Delete</button>
-      <button class="add">Add</button>
-    </div>
-  </div>
-  
-  <div class="product">
-    <img src="" alt="Product 2 Image" class="product-image">
-    <h2>Product 2</h2>
-    <p>Description of Product</p>
-    <div class="actions">
-      <button class="edit">Edit</button>
-      <button class="delete">Delete</button>
-      <button class="add">Add</button>
-    </div>
-  </div>
-  
-  <div class="product">
-    <img src="" alt="Product 3 Image" class="product-image">
-    <h2>Product 3</h2>
-    <p>Description of Product</p>
-    <div class="actions">
-      <button class="edit">Edit</button>
-      <button class="delete">Delete</button>
-      <button class="add">Add</button>
-    </div>
-  </div>
-  
-  <div class="product">
-    <img src="Images/Mexican-Roll-Ups-with-Black-Beans-Vegetarian-Appetizer-3-1.jpg" alt="Product 4 Image" class="product-image">
-    <h2>Product 4</h2>
-    <p>Description of Product</p>
-    <div class="actions">
-      <button class="edit">Edit</button>
-      <button class="delete">Delete</button>
-      <button class="add">Add</button>
-    </div>
-  </div>
+  <div id="products-container"></div>
 </div>
 
+<script src="script.js"></script>
 </body>
 </html>
+<script>
+  document.addEventListener('DOMContentLoaded', (event) => {
+    const productsContainer = document.getElementById('products-container');
+
+    for (let i = 1; i <= 20; i++) {
+        const productHTML = `
+            <div class="product">
+                <img src="Images/product${i}.jpg" alt="Product ${i} Image" class="product-image">
+                <h2>Product ${i}</h2>
+                <p>Description of Product ${i}</p>
+                <div class="actions">
+                    <button class="edit">Edit</button>
+                    <button class="delete">Delete</button>
+                    <button class="add">Add</button>
+                </div>
+            </div>
+        `;
+        productsContainer.insertAdjacentHTML('beforeend', productHTML);
+    }
+});
+
+</script>
